1-implement-main-screen-ui: Initialized main screen ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Wi-Fi Extender</string>
+    <string name="connect">Connect</string>
+    <string name="wps">WPS</string>
+    <string name="start_wifi_hotspot">Start Wi-Fi Hotspot</string>
+    <string name="stop_wifi_hotspot">Stop Wi-Fi Hotspot</string>
+    <string name="name">Name</string>
+    <string name="password">Password</string>
+    <string name="configure_hotspots">Configure Hotspots</string>
+    <string name="keep_screen_on">Keep Screen On</string>
+    <string name="connection_instructions">Connection Instructions</string>
+    <string name="connected_devices">Connected Devices</string>
+    <string name="android_devices">Android Devices</string>
+    <string name="windows_and_mac">Windows &amp; Mac</string>
+    <string name="other">Other</string>
+    <string name="android_instructions">1. Launch NetShare app in yht other device.\n2. Tap “CONNECT” in the actionbar.</string>
+    <string name="windows_and_mac_instructions">1. Connect the device to Wi-Fi Hotspot.\n2. Open http://192.168.49.1:8181 in the device to setup the connection</string>
+    <string name="other_instructions">1. Connect the device to the hotspot.\n2. Set the proxy settings to:</string>
+    <string name="address_and_port">Address: 192.168.49.1\nPort: 8282</string>
+    <string name="more_help">MORE HELP</string>
 </resources>
